# andro

./: .gitignore  .version-hook.sh  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: commands.rs  config.rs  emulator.rs  lib.rs  main.rs  provision.rs  sdk.rs
tests/: cli.rs
