[package]
name = "andro"
version = "1.0.0"
edition = "2024"
description = "Run Android apps from the macOS command line on a disposable, self-contained Android emulator (Apple Silicon)"
license = "MIT"
repository = "https://github.com/maxgfr/andro"

[lib]
name = "andro"
path = "src/lib.rs"

[[bin]]
name = "andro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
