[package]
name = "andro"
version = "1.2.0"
edition = "2024"
description = "Run Android apps from the macOS command line on a disposable, self-contained Android emulator (Apple Silicon)"
license = "MIT"
repository = "https://github.com/maxgfr/andro"

[lib]
name = "andro"
path = "src/lib.rs"

[[bin]]
name = "andro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
dirs = "5"

# Optimize the shipped binary: it's I/O-bound (shells out to curl/adb/emulator),
# so trade compile time for a smaller, stripped artifact.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
